# cpp-template

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: test.yml
source/: CMakeLists.txt  helloworld.cpp  tests.cpp
